--- a/Samochod/pom.xml
+++ b/Samochod/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.example</groupId>
     <artifactId>samochod</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>SamochodSymulator</name>
+    <name>Samochod</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -58,7 +58,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>pl.nikodem.samochod/pl.nikodem.samochod.HelloApplication</mainClass>
+                            <mainClass>com.example.samochod/com.example.samochod.HelloApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
